# sandbox-rust

./: Cargo.toml  README.md  Untitled.ipynb  data.txt  file1.txt  script.py  setup-instructions.md
data/: plots.ipynb  tests.ipynb
data/.ipynb_checkpoints/: tests-checkpoint.ipynb
results/poisson-solution-arrays/: file.txt
src/: lib.rs  main.rs  old.rs  tests.rs  unofficial.rs
