[package]
name = "sandbox-rust"
version = "1.66.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
ndarray = "0.15.6"
ndarray-linalg = { version = "0.16.0", features = ["openblas-system"] }
plotly = { version = "0.8.3", features = ["kaleido", "ndarray"] }
plotters = "0.3.4"

[dev-dependencies]
criterion = "0.5"

